--- a/html/week09/09-13.html
+++ b/html/week09/09-13.html
@@ -3,9 +3,32 @@
 <head>
     <!-- onload로 이미지의 크기 알아내기 -->
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>onload로 이미지 크기 출력</title>
+    <script>
+        function changeImage(){
+            var sel = document.getElementById("sel");
+            var img = document.getElementById("myImg");
+            img.onload = function(){ // 이미지 크기 출력
+                var mySpan = document.getElementById("mySpan");
+                mySpan.innerHTML = img.width + "x"+ img.height;
+            }
+            var index = sel.selectedIndex; //선택된 옵션 인덱스
+            img.src = sel.options[index].value; //<option>의 value속성
+            // 이미지 로딩 시작, 완료 후 onload 리스너 호출
+        }
+    </script>
 </head>
-<body>
-    
+<body onload="changeImage()">
+    <h3>onload로 이미지 크기 출력</h3>
+    <hr>
+    <form>
+        <select id="sel" onchange="changeImage()">
+            <option value="media/apple.png">사과</option>
+            <option value="media/banana.png">바나나</option>
+            <option value="media/mango.png">망고</option>
+        </select>
+        <span id="mySpan">이미지 크기</span>
+    </form>
+    <p><img id = "myImg" src="media/apple.png" alt="."></p>
 </body>
 </html>
