--- a/html/week10/ex10-03.html
+++ b/html/week10/ex10-03.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <title>선택된 라디오버튼 알아내기</title>
     <script>
-        function findChecked(){
+        function findChecked(){ 
             var found = null;
-            var kcity = document.getElementByName("city");
-            for(var i = 0;i<kcity.length;i++){
-                if(kcity[i].checked==true)
-                found = kcity[i];
-                break;
+            var kcity = document.getElementsByName("city");
+            for(var i = 0;i<kcity.length;i++)
+                if(kcity[i].checked==true){
+                    found = kcity[i];
             }
             if(found != null)
                 alert(found.value + "이 선택되었음");
@@ -23,10 +22,10 @@
     <h3>버튼을 클릭하면 선택된 라디오 버튼의 value를 출력합니다.</h3>
     <hr>
     <form>
-        <input type="radio" name = "city" value = "seoul" checkd>서울
+        <input type="radio" name = "city" value = "seoul" checked>서울
         <input type="radio" name = "city" value="busan">부산
         <input type="radio" name = "city" value="chunchen">춘천
-        <input type="button" value="Find Check" onclick = "findClicked()">
+        <input type="button" value="Find Check" onclick = "findChecked()">
     </form>
 </body>
 </html>
