--- a/HTML_AR/2day/ex.html
+++ b/HTML_AR/2day/ex.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <script src="ex01.js"></script>
+    <script src="ex.js">
+    </script>
+    <script>
+        ex01();
+        ex02();
+        ex03();
+        ex04();
+        ex05();
+        ex06();
+        ex07();
+    </script>
 </head>
 <body>
     
