--- a/HTML_AR/2day/ex06.html
+++ b/HTML_AR/2day/ex06.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script>
-        console.log("hello!");
-    </script>
+    <script src="ex06.js"></script>
+    
 </head>
 <body>
     
