--- a/HTML_AR/2day/ex08.html
+++ b/HTML_AR/2day/ex08.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <script src="ex01.js"></script>
+    <script src="ex.js"></script>
+    <script>ex08();</script>
 </head>
 <body>
     
