--- a/HTML_AR/2day/ex10.html
+++ b/HTML_AR/2day/ex10.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="ex.js"></script>
-    <script>ex08("banana");</script>
+    <script>ex10();</script>
 </head>
 <body>
     
