--- a/HTML_AR/2day/ex18.html
+++ b/HTML_AR/2day/ex18.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="ex.js"></script>
-    <script>ex08("banana");</script>
+    <script>
+        document.write("document write test");
+    </script>
 </head>
 <body>
     
