--- a/HTML_AR/2day/ex19.html
+++ b/HTML_AR/2day/ex19.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        alert("Hello");
+        
+        var a = confirm("hi");
+        document.write("<p>"+a);
+        function fnPromptTest(){
+            var b = prompt("Hello" ,"hi");
+            document.write("<p>"+b);
+        }   
+        s
+        setTimeout(fnPromptTest,3000);
+    </script>
 </head>
 <body>
-    
+
 </body>
 </html>
