--- a/html/week12/ex10.html
+++ b/html/week12/ex10.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>jQuery 태그 선택자</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>위치 필터 선택자</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script>
-        $(document).ready(function (){
-            $('h1').css('color','blue');
+        $(document).ready(function(){
+
         });
     </script>
 </head>
 <body>
-    <h1>jQuery 테스트</h1>
-    <p>jQuery 테스트</p>
+    
 </body>
 </html>
