--- a/html/week12/ex12-03.html
+++ b/html/week12/ex12-03.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>jQuery 태그 선택자</title>
+    <title>jQuery 여러 태그 선택자</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script>
         $(document).ready(function (){
-            $('h1').css('color','blue');
+            $('h1, p').css('color','gray');
         });
     </script>
 </head>
