--- a/html/week12/ex12-01.html
+++ b/html/week12/ex12-01.html
@@ -2,25 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>옵션 선택으로 사이트 접속</title>
-
+    <title>jQuery 전체 선택자</title>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script>
-        function load(){
-            var select = document.getElementById("site");
-            window.open(select.options[select.selectedIndex].value,"myWin","left=300,top=300,width=800,height=300");
-        }
+        $(document).ready(function(){
+            $('*').css('color','red');
+        });
     </script>
 </head>
 <body>
-    <h3>옵션 선택으로 사이트 접속</h3>
-    윈도우 하나를 공유합니다.
-    <hr>
-    접속할 사이트 <br>
-    <select id="site" onchange="load()">
-        <option value="" selected>사이트 선택</option>
-        <option value="https://www.oracle.com/kr/index.html">오라클</option>
-        <option value="http://www.naver.com">네이버</option>
-        <option value="http://www.google.com">구글</option>
-    </select>
+    <h1>jQuery 전체 선택자 : *</h1>
+    좋은 하루입니다.
 </body>
 </html>
